--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,10 @@
-.App {
+/* .App {
 	text-align: center;
 }
 
 .App-logo {
 	height: 20vmin;
 	pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-	.App-logo {
-		animation: App-logo-spin infinite 10s linear;
-	}
 }
 
 .App-header {
@@ -26,13 +20,4 @@
 
 .App-link {
 	color: #7d848a;
-}
-
-@keyframes App-logo-spin {
-	from {
-		transform: rotate(0deg);
-	}
-	to {
-		transform: rotate(360deg);
-	}
-}
+} */
