--- a/src/components/footer/index.css
+++ b/src/components/footer/index.css
@@ -12,9 +12,9 @@ body {
 	height: 60px;
 	background-color: transparent;
 	text-align: center;
-	color: #7d848a;
+	color: #7d848a !important;
 }
 a {
-	color: inherit;
-	text-decoration: inherit;
+	color: inherit !important;
+	text-decoration: inherit !important;
 }
