updated images location and names

--- a/src/pages/Assets/style/style.css
+++ b/src/pages/Assets/style/style.css
@@ -7,6 +7,10 @@
 }
 .welcomeMessage {
 	color: #7d848a !important;
+	padding-bottom: 20px;
+}
+.philosophyMessage {
+	color: #7d848a !important;
 }
 .contactTitle {
 	color: #7d848a !important;
